--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mui/material": "5.15.12",
     "@mui/system": "5.15.12",
     "@mui/utils": "5.15.12",
+    "@mui/x-data-grid": "^7.3.1",
     "@mui/x-date-pickers": "6.19.6",
     "@phosphor-icons/react": "2.0.15",
     "apexcharts": "3.46.0",
