--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@mui/material": "5.15.12",
     "@mui/system": "5.15.12",
     "@mui/utils": "5.15.12",
-    "@mui/x-data-grid": "^7.3.1",
     "@mui/x-date-pickers": "6.19.6",
     "@phosphor-icons/react": "2.0.15",
     "apexcharts": "3.46.0",
@@ -40,6 +39,7 @@
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
     "react-hook-form": "7.51.0",
+    "react-player": "^2.16.0",
     "zod": "3.22.4"
   },
   "devDependencies": {
