--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@phosphor-icons/react": "2.0.15",
     "apexcharts": "3.46.0",
     "dayjs": "1.11.10",
+    "jodit-react": "^4.1.2",
+    "jodit-react-ts": "^0.9.0",
     "next": "14.1.3",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
